Revert string changes.

--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -73790,7 +73790,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Envoyer un message à l’instructeur"
+            "value" : "Envoyer un message à l’enseignant(e)"
           }
         },
         "ga" : {
@@ -118521,7 +118521,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Instructeur-assistant"
+            "value" : "Enseignant(e)-assistant"
           }
         },
         "ga" : {
@@ -120872,7 +120872,7 @@
         "fr-CA" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Instructeurs-assistants"
+            "value" : "Enseignants-assistants"
           }
         },
         "ga" : {
