feat: add programs
refs:CLX-2510
affects: Student
release note: Add programs

test plan:

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -13,6 +13,9 @@
     "'s score weight was changed  " : {
 
     },
+    "%" : {
+
+    },
     "%@ %@" : {
       "localizations" : {
         "en" : {
@@ -269,6 +272,9 @@
 
     },
     "Comments" : {
+
+    },
+    "complete" : {
 
     },
     "Complete all of the items." : {
@@ -1105,6 +1111,9 @@
 
     },
     "You have been invited to join" : {
+
+    },
+    "You’ve been enrolled in Course" : {
 
     },
     "Your draft was deleted." : {
