Old Submissions List Code Cleanup (#3552)
refs: MBL-19090
builds: Teacher, Student
affects: Teacher, Student
release note: none

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -4856,6 +4856,7 @@
       }
     },
     "All submissions" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -22288,6 +22289,7 @@
       }
     },
     "Filter" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -22544,6 +22546,7 @@
       }
     },
     "Filter (%d)" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -24594,6 +24597,7 @@
       }
     },
     "Grade post policy" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -29299,6 +29303,7 @@
       }
     },
     "Group %lld" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -31858,6 +31863,9 @@
           }
         }
       }
+    },
+    "Launch External Tool" : {
+
     },
     "Letter grade" : {
       "extractionState" : "stale",
@@ -38525,6 +38533,9 @@
         }
       }
     },
+    "Open the Quiz" : {
+
+    },
     "Others" : {
       "localizations" : {
         "ar" : {
@@ -42627,6 +42638,7 @@
       }
     },
     "Reset" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -44172,6 +44184,7 @@
 
     },
     "Scored above..." : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
@@ -44428,6 +44441,7 @@
       }
     },
     "Scored below..." : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
