Revert Slovenian "Sistem Canvas" translation to "Canvas".

--- a/Student/Student/InfoPlist.xcstrings
+++ b/Student/Student/InfoPlist.xcstrings
@@ -211,7 +211,7 @@
         "sl" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Sistem Canvas"
+            "value" : "Canvas"
           }
         },
         "sv" : {
@@ -486,7 +486,7 @@
         "sl" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Sistem Canvas"
+            "value" : "Canvas"
           }
         },
         "sv" : {
