--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -271,6 +271,9 @@
     "complete" : {
 
     },
+    "Complete" : {
+
+    },
     "Complete all of the items." : {
 
     },
@@ -299,6 +302,9 @@
 
     },
     "Course Selection" : {
+
+    },
+    "courses" : {
 
     },
     "Create message" : {
@@ -695,6 +701,9 @@
 
     },
     "Nuku'alofa (+13:00/+13:00)" : {
+
+    },
+    "of" : {
 
     },
     "Ok" : {
