Revert Slovenian "Sistem Canvas" translations to "Canvas".

--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -29088,7 +29088,7 @@
         "sl" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Zdi se, da sistem Canvas ni na voljo. Poskusite znova pozneje."
+            "value" : "Zdi se, da Canvas ni na voljo. Poskusite znova pozneje."
           }
         },
         "sv" : {
@@ -63655,7 +63655,7 @@
         "sl" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Kako vam je všeč sistem Canvas?"
+            "value" : "Kako vam je všeč Canvas?"
           }
         },
         "sv" : {
@@ -147680,7 +147680,7 @@
         "sl" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Ocenite sistem Canvas v trgovini App Store."
+            "value" : "Ocenite Canvas v trgovini App Store."
           }
         },
         "sv" : {
