Move program card to horizon app
refs: CLX-2510
builds: Student
affects: Student
release note: non

test plan:non

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -28666,6 +28666,12 @@
         }
       }
     },
+    "Enroll" : {
+
+    },
+    "Enrolled" : {
+
+    },
     "Error" : {
       "localizations" : {
         "ar" : {
@@ -44025,6 +44031,9 @@
           }
         }
       }
+    },
+    "Locked" : {
+
     },
     "Locked Content" : {
       "localizations" : {
@@ -62726,6 +62735,9 @@
           }
         }
       }
+    },
+    "Required" : {
+
     },
     "Result: %@" : {
       "localizations" : {
