--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -88948,7 +88948,7 @@
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Lo sentimos, algo salió mal"
+            "value" : "Lo siento, algo salió mal"
           }
         },
         "es-ES" : {
