feat add program switcher
refs: CLX-2515 , CLX-2518
builds: Student
affects: Student
release note: none

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -4589,6 +4589,9 @@
         }
       }
     },
+    "All" : {
+
+    },
     "All messages" : {
       "localizations" : {
         "ar" : {
@@ -58381,6 +58384,9 @@
         }
       }
     },
+    "Part of" : {
+
+    },
     "Perth (+08:00)" : {
       "localizations" : {
         "ar" : {
@@ -60428,6 +60434,9 @@
           }
         }
       }
+    },
+    "Program overview" : {
+
     },
     "Puerto Rico (-04:00)" : {
       "localizations" : {
