refs: CLX-2659 builds: student affects: student release note: Report a problem for Canvas for Careers
test plan:

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -62715,6 +62715,9 @@
         }
       }
     },
+    "Report a problem" : {
+
+    },
     "Result: %@" : {
       "localizations" : {
         "ar" : {
