feat: add empty state
refs: CLX-2515 , CLX-2518
builds: Student
affects: Student
release note: none

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -87068,6 +87068,9 @@
         }
       }
     },
+    "You aren’t currently enrolled in a course or program." : {
+
+    },
     "You aren’t currently enrolled in a course." : {
       "localizations" : {
         "ar" : {
