--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -50192,6 +50192,9 @@
         }
       }
     },
+    "My program" : {
+
+    },
     "My progress" : {
       "localizations" : {
         "ar" : {
@@ -85026,6 +85029,9 @@
           }
         }
       }
+    },
+    "Welcome! View your program to enroll in your first course." : {
+
     },
     "Wellington (+12:00/+13:00)" : {
       "localizations" : {
