--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -23822,6 +23822,9 @@
         }
       }
     },
+    "Filter by Section" : {
+
+    },
     "Filter submissions" : {
       "localizations" : {
         "ar" : {
