Introducing Submission List Preference Encapsulate filter and sortOrder
refs: MBL-19318
affects: Teacher
builds: Teacher
release note: none

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -49032,6 +49032,9 @@
         }
       }
     },
+    "Sort by" : {
+
+    },
     "Specific Sections" : {
       "localizations" : {
         "ar" : {
