[CLX-2658][Student] - Notifications (#3627)
refs: CLX-2658
builds: Student
affects: Student
release note: Career - Added Push Notifications

test plan:
- Trigger a push notification (send a message, grade an assignment, do a course announcement)
- Check if push notifications is received
- After opening the app, check if the app icon reflects the correct number of unread notifications
- Check if inbox icon shows a badge when there's an unread message
- Check if notifications icon shows a badge when there's an unread notification

--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -80871,6 +80871,7 @@
       }
     },
     "Unknown Course" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
