--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -49541,6 +49541,9 @@
         }
       }
     },
+    "Statuses" : {
+
+    },
     "Student" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -50311,6 +50314,7 @@
       }
     },
     "Submission Filter" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
