Basic functions of score-based filtering
refs: MBL-19317
affects: Teacher
builds: Teacher
release note: none

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -42628,6 +42628,9 @@
         }
       }
     },
+    "Precise filtering" : {
+
+    },
     "Present" : {
       "localizations" : {
         "ar" : {
@@ -46983,6 +46986,12 @@
           }
         }
       }
+    },
+    "Scored Less than" : {
+
+    },
+    "Scored More than" : {
+
     },
     "Search" : {
       "localizations" : {
