Add differentiation tags filtering to UI.

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -15104,6 +15104,9 @@
         }
       }
     },
+    "Differentiation Tags" : {
+
+    },
     "Dismiss" : {
       "localizations" : {
         "ar" : {
