Add users without tags filter option.

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -50331,6 +50331,9 @@
         }
       }
     },
+    "Students without Differentiation tags" : {
+
+    },
     "Submission Filter" : {
       "extractionState" : "stale",
       "localizations" : {
