[MBL-19317][Teacher] SpeedGrader - Submissions List Score-Based Filtering  (#3648)
refs: MBL-19317
affects: Teacher
builds: Teacher
release note: Improved filtering and sorting options on submission list.

--- a/Teacher/Teacher/Localizable.xcstrings
+++ b/Teacher/Teacher/Localizable.xcstrings
@@ -23822,6 +23822,9 @@
         }
       }
     },
+    "Filter by Section" : {
+
+    },
     "Filter submissions" : {
       "localizations" : {
         "ar" : {
@@ -42625,6 +42628,9 @@
         }
       }
     },
+    "Precise filtering" : {
+
+    },
     "Present" : {
       "localizations" : {
         "ar" : {
@@ -46981,6 +46987,12 @@
         }
       }
     },
+    "Scored Less than" : {
+
+    },
+    "Scored More than" : {
+
+    },
     "Search" : {
       "localizations" : {
         "ar" : {
@@ -49029,6 +49041,9 @@
         }
       }
     },
+    "Sort by" : {
+
+    },
     "Specific Sections" : {
       "localizations" : {
         "ar" : {
@@ -49540,6 +49555,9 @@
           }
         }
       }
+    },
+    "Statuses" : {
+
     },
     "Student" : {
       "extractionState" : "stale",
@@ -50311,6 +50329,7 @@
       }
     },
     "Submission Filter" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ar" : {
           "stringUnit" : {
